# aws-monitoring

./: .editorconfig  .env.local  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  serverless.agent.local.yml  serverless.agent.yml  serverless.local.yml  serverless.master.local.yml  serverless.master.yml  serverless.yml
.claude/: README.md  RULES.md  ai-instruction.md  ai_feature_workflow.md  ai_feature_workflow_en.md  index-backend.md  index-frontend.md  settings.json
.claude/agents/: aws-architect.md  backend-architect.md  frontend-architect.md  python-expert.md  refactoring-expert.md  repo-index.md  requirements-analyst.md  root-cause-analyst.md  system-architect.md  technical-writer.md
.claude/commands/: analyze.md  brainstorm.md  design.md  help.md  implement.md  index.md  research.md  test.md
.claude/mcp/: chrome-devtools.md  context7.md  playwright.md  sequential.md
.claude/modes/: brainstorming.md  deep-research.md  orchestration.md  task-management.md  token-efficiency.md
.claude/tasks/: refactor.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  front-feature.md  operation.md
.github/workflows/: claude.yml
.local/: data_model.json
.local/localstack/: dynamodb.sh  s3.sh  ses.sh  sqs.sh
backend/: .env.local  CLAUDE.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml  serverless.local.yml  serverless.yml
backend/ops/: base.sh
backend/tests/: conftest.py  mock.py
bk/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.yaml
docs/: API_DESIGN_SUMMARY.md  API_ENDPOINTS_SUMMARY.md  API_QUICK_REFERENCE.txt  Denaribots-Lambda-Flowchart-20230909.drawio  MISSING_API_ENDPOINTS.md  ai_log_analysis.md  api-specification.yaml  aws-api-gw.md  aws-configs.md  aws-deployment.md  aws-environment-configs.md  aws-prerequisite-resources.md  aws_config_implementation_guide.md  aws_config_monitoring_design.md  aws_config_monitoring_requirements.md  db.md  deployment.md  development.md  folder_structure.md  frontend-design.md  frontend-documentation-guide.md  frontend-implementation-guide.md  frontend-overview.md  frontend-quick-start.md  frontend-screens-design.md  frontend-types-reference.md  index.md  infrastructure.md  overview.md  project_structure.md  resources.md  screen-api-mapping.md  system_design.md  update-firmware-version.md
docs/architecture/: DOMAIN_REORGANIZATION_STRATEGY.md
docs/claude/: BACKEND_INDEX.md  FRONTEND_INDEX.md
docs/db/: event_table.md
docs/design/: ENTITY_MODELS_DESIGN.md
docs/git/: contributing.md
docs/images/: .$infra.png.bkp
docs/models/: aws_account.md  aws_config.md  event.md  monitoring_config.md  task.md  task_comment.md  user.md
docs/plans/: aws_config_integration_plan.md  current_structure.md  ddd.md  hexagon-plan.md  hexagon.md  hexagonal-refactoring-plan.md  plan.md  refactor.md
docs/refactor/: index.md  tasks.md
docs/tasks/: API_ENDPOINTS_SUMMARY.txt  BACKEND_API_IMPLEMENTATION_TASKS.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md
frontend/: .env.development  .env.production  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
infra/configs/: local.yml
infra/functions/: HandleMonitoringEvents.yml  QueryErrorLogs.yml  UpdateDeployment.yml
infra/plugins/: python_requirements.yml
infra/resources/: iam.yml
infra/roles/: deployment_policy.json  deployment_policy.json.tpl  neos.deployment_policy.json
ops/: activate.sh  base.sh  install.sh
ops/deployment/: bootstrap.sh  create_metadata.py  delete.sh  deploy.sh  destroy.sh  package.sh  prepare.sh
ops/development/: coverage.sh  install.sh  mon.sh  start.sh
ops/pyscripts/: cli.py
ops/scripts/: activate.sh  base.sh  cloudwatch_query_logs_insignt.py  deploy.sh  dynamodb_dummy_sensors.py  install.sh  sqs_describe_queues.sh  sqs_purge_queues.sh  update_firmware_version.sh
ops/tools/: monterm.sh
src/: constants.py  logger.py  templates.py  types.py  utils.py
src/adapters/: api.py  container.py  logs.py  notifiers.py  publisher.py
src/common/: configs.py  constants.py  exceptions.py  logger.py  models.py  processes.py  template.py
src/infra/: cloudwatch.py
src/libs/: configs.py  logger.py  template.py
src/models/: __init__.py  account.py  accounts.py  alert_settings.py  base.py  device_monitor_reads.py  device_monitors.py  device_tokens.py  devices.py  event.py  monitoring_event.py  project.py  (+4 more)
statics/: metadata.json
tests/: conftest.py  inject.py  mock.py
(+720 files in other folders)
