[tool.poetry]
name = "src"
version = "1.0.0"
description = ""
authors = ["AnhLT59"]

# base dependencies -----------------------------------------
[tool.poetry.dependencies]
python = "~3.12"
requests = "~2.32.0"
uuid-utils = "~0.10.0"
aws-lambda-powertools = "~3.12.0"
types-boto3 = {extras = ["logs", "ssm", "health", "events"], version = "~1.38.00"}

[tool.poetry.group.master.dependencies]
pynamodb = "~6.0.0"
pydantic = "~2.11.0"
dependency-injector = "~4.46.0"

[tool.poetry.group.local.dependencies]
pre-commit = "~4.2.0"
nodeenv = "~1.9.0"
awscli = "~1.40.0"
boto3 = "~1.38.0"

# Testing dependencies. -------------------------------------
[tool.poetry.group.test.dependencies]
pytest = "~8.3.0"
pytest-cov = "~6.1.0"
python-dotenv = "~1.1.0"
moto = "~5.1.0"
mock = "~5.2.0"
faker = "~37.3.0"

# Production dependencies. ----------------------------------
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CQA tools -------------------------------------------------
[tool.black]
line_length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.ruff]
line-length = 119

[tool.bandit]
exclude_dirs = ["config", "data", "localstack", "migrations", "scripts", "tests"]

[tool.pytest.ini_options]
#addopts = "-ra --cov=app"
testpaths = ["tests"]

# plugins ---------------------------------------------------
[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
