[project]
name = "src"
version = "1.0.0"
description = ""
authors = [{ name = "AnhLT59" }]
license = { text = "MIT" }
readme = "README.md"


# base dependencies -----------------------------------------
requires-python = ">=3.13,<3.14"
dependencies = [
  "aws-lambda-powertools~=3.20.0",
  "pydantic~=2.11.0",
  "requests~=2.32.0",
  "uuid-utils~=0.11.0",
  "types-boto3[logs, ssm, health, events, ecs, lambda]~=1.40.00",
  "pynamodb~=6.1.0",
  "dependency-injector~=4.48.0",
  "jinja2~=3.1.0"
]

[dependency-groups]
# Local development dependencies. ---------------------------
local = [
  "pre-commit~=4.3.0",
  "nodeenv~=1.9.0",
  "awscli~=1.42.0",
  "boto3~=1.40.0",
  "ruff~=0.14.0",
  "bandit~=1.8.0",
  "rich~=14.2.0",
  "SuperClaude>=4.1.0"
]
# Testing dependencies. -------------------------------------
test = [
  "pytest~=8.4.0",
  "pytest-cov~=7.0.0",
  "python-dotenv~=1.1.0",
  "moto~=5.1.0",
  "faker~=37.3.0",
  "coverage-badge~=1.1.0",
  "click~=8.3.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CQA tools -------------------------------------------------
[tool.black]
line_length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.ruff]
line-length = 119

[tool.bandit]
exclude_dirs = ["config", "data", "localstack", "migrations", "scripts", "tests"]

[tool.pytest.ini_options]
addopts = "-ra --cov=src"
testpaths = ["tests"]

# scripts ---------------------------------------------------
[project.scripts]
awsmon = "ops.pyscripts.cli:main"

# plugins ---------------------------------------------------
[tool.poetry.requires-plugins]
poetry-plugin-export = "~1.8"
